--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -3,7 +3,7 @@ name: Build and Release (Rust)
 on:
   push:
     tags:
-      - 'v*'  # Triggers on version tags like v1.0.0
+      - 'v*'  # Trigger on tags like v1.0.0
 
 jobs:
   build:
@@ -15,9 +15,10 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Set up Rust
-        uses: actions/setup-rust@v1
+        uses: actions-rs/toolchain@v1
         with:
-          rust-version: stable
+          toolchain: stable
+          override: true
 
       - name: Build project
         run: cargo build --release
@@ -26,8 +27,9 @@ jobs:
         run: |
           mkdir -p dist
           cp target/release/fileio dist/
+          chmod +x dist/fileio
           cd dist
-          tar -czvf ${GITHUB_REF##*/}-linux-x86_64.tar.gz fileio
+          tar -czvf "${{ github.ref_name }}-linux-x86_64.tar.gz" fileio
 
       - name: Upload to GitHub Release
         uses: softprops/action-gh-release@v1
