Add image preview functionality using ratatui-image
- Introduced ImagePreview struct to manage image loading and rendering.
- Integrated image loading logic in the update function to handle image files.
- Enhanced the UI to render image previews alongside text content.
- Added utility functions to check for image file types and render images.
- Updated dependencies in Cargo.toml for ratatui-image and image crates.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,5 @@ edition = "2021"
 crossterm = "0.29.0"
 ratatui = "0.29.0"
 tokio = { version = "1.0", features = ["full"] }
+ratatui-image = "8.0.1"
+image = "0.25.0"
